--- a/PyAVD/requirements.txt
+++ b/PyAVD/requirements.txt
@@ -1,5 +1,6 @@
-Pint==0.17
-matplotlib==3.4.2
-numpy==1.21.0
 streamlit==0.86.0
-pandas==1.3.0
+matplotlib==3.4.2
+ambiance==1.3.0
+Pint==0.17
+numpy==1.21.0
+plotly==5.1.0
