--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-Pint==0.17
+plotly==5.1.0
 matplotlib==3.4.2
-numpy==1.21.0
 streamlit==0.86.0
-pandas==1.3.0
+Pint==0.17
+ambiance==1.3.0
+numpy==1.21.0
